frontend/scss/dice/dice.scss
$containerWidth: 200px;
$containerHeight: $containerWidth;

$faceWidth: $containerWidth * 0.5;
$faceHeight: $faceWidth * 0.86;

$transitionDuration: 0.5s;
$animationDuration: 1s;

$angle: 53deg;
$ringAngle: -11deg;
$sideAngle: calc(360deg / 5);
$opacity: 0.75;
$color: rgba(216, 112, 15, $opacity);

$rotateX: -$angle;
$translateZ: $faceWidth * 0.335;
$translateY: -$faceHeight * 0.15;
$translateRingZ: $faceWidth * 0.75;
$translateRingY: $faceHeight * 0.78 + $translateY;
$translateLowerZ: $translateZ;
$translateLowerY: $faceHeight * 0.78 + $translateRingY;

body.rolling {
    overflow: hidden;

    > .backdrop {
        transition: all 1s;
        position: fixed;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        z-index: 99;
        background: rgba(0, 0, 0, 0.6);
        backdrop-filter: blur(10px);

        &.critical-success {
            background: rgba(14, 67, 0, 0.6);
        }
        &.critical-fail {
            background: rgba(67, 0, 0, 0.6);
        }
    }

    .dice-tray {
        display: flex;
        font-family: "Roboto";
    }
}

.dice-tray {
    display: none;
    position: fixed;
    z-index: 100;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;

    justify-content: center;
    align-items: center;
    flex-direction: column;

    h3 {
        color: white;
        font-size: 3em;
        margin-top: 40px;

        transition: all 1s;
        opacity: 0;
    }
    &.reveal h3 {
        opacity: 1;
    }

    p.d3 {
        display: none;
        color: #bbb;
        font-style: italic;
    }
    &.reveal.d3 p.d3 {
        display: block;
    }

    h3.critical {
        display: none;
    }

    &.critical-fail h3.critical-fail {
        display: block;
        color: #ff0000;
    }
    &.critical-success h3.critical-success {
        display: block;
        color: #80ff00;
    }

    p.roll-note {
        margin-top: 8px;
        font-size: 0.85em;
        font-style: italic;
        color: #aaa;
    }
}

@keyframes roll {
    10% {
        transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
    }
    90% {
        transform: rotateX(240deg) rotateY(480deg) rotateZ(0deg);
    }
}

.dice-container {
    width: 200px;
    height: 200px;
    position: relative;
    perspective: 1500px;

    > div {
        position: absolute;
        width: 100%;
        height: 100%;
        transform-style: preserve-3d;
        transition: transform $transitionDuration ease-out;

        transform: rotateX($rotateX);

        &.rolling {
            animation: roll $animationDuration linear;
        }

        .face {
            $horizontalMargin: -$faceWidth * 0.5;

            position: absolute;
            left: 50%;
            top: 0;
            margin: 0 $horizontalMargin;
            border-left: $faceWidth * 0.5 solid transparent;
            border-right: $faceWidth * 0.5 solid transparent;
            border-bottom: $faceHeight solid $color;
            width: 0px;
            height: 0px;
            transform-style: preserve-3d;
            backface-visibility: hidden;

            counter-increment: steps 1;

            &:before {
                content: counter(steps);
                position: absolute;
                top: $faceHeight * 0.25;
                left: -$faceWidth;
                color: #fff;
                text-shadow: 1px 1px 3px #000;
                font-size: $faceHeight * 0.4;
                text-align: center;
                line-height: $faceHeight * 0.9;
                width: $faceWidth * 2;
                height: $faceHeight;
            }
        }
    }
}

.dice-container > .die-d20 {
    @for $i from 1 through 5 {
        &[data-face="#{$i}"] {
            $angleMultiplier: $i - 1;
            transform: rotateX(-$angle) rotateY($sideAngle * $angleMultiplier);
        }
    }

    @for $i from 16 through 20 {
        &[data-face="#{$i}"] {
            $angleMultiplier: $i - 15;
            transform: rotateX(-$angle + 180deg) rotateY(-$sideAngle * $angleMultiplier);
        }
    }

    @for $i from 6 through 10 {
        &[data-face="#{$i}"] {
            $angleMultiplier: $i - 6;
            transform: rotateX(-$ringAngle) rotateZ(180deg) rotateY($sideAngle * $angleMultiplier);
        }
    }

    @for $i from 11 through 15 {
        &[data-face="#{$i}"] {
            $angleMultiplier: $i - 8;
            transform: rotateX(-$ringAngle) rotateY(-$sideAngle * $angleMultiplier - calc($sideAngle/2));
        }
    }

    .face {
        @for $i from 1 through 5 {
            &:nth-child(#{$i}) {
                $angleMultiplier: $i - 1;
                transform: rotateY(-$sideAngle * $angleMultiplier) translateZ($translateZ) translateY($translateY) rotateX($angle);
            }
        }

        @for $i from 16 through 20 {
            &:nth-child(#{$i}) {
                $angleMultiplier: $i - 18;
                transform: rotateY($sideAngle * $angleMultiplier + calc($sideAngle/2))
                    translateZ($translateLowerZ)
                    translateY($translateLowerY)
                    rotateZ(180deg)
                    rotateX($angle);
            }
        }

        @for $i from 6 through 10 {
            &:nth-child(#{$i}) {
                $angleMultiplier: $i - 11;
                transform: rotateY(-$sideAngle * $angleMultiplier)
                    translateZ($translateRingZ)
                    translateY($translateRingY)
                    rotateZ(180deg)
                    rotateX($ringAngle);
            }
        }

        @for $i from 11 through 15 {
            &:nth-child(#{$i}) {
                $angleMultiplier: $i - 8;
                transform: rotateY($sideAngle * $angleMultiplier + calc($sideAngle/2))
                    translateZ($translateRingZ)
                    translateY($translateRingY)
                    rotateX($ringAngle);
            }
        }
    }
}

@keyframes roll-d6 {
    0% {
        transform: rotateY(0deg) rotateX(-20deg) rotateZ(0deg);
    }
    50% {
        transform: rotateY(130deg) rotateX(130deg) rotateX(130deg);
    }
    100% {
        transform: rotateY(260deg) rotateX(180deg) rotateZ(280deg);
    }
}

@keyframes roll-slow-d6 {
    0% {
        transform: rotateX(0deg);
    }
    50% {
        transform: rotateX(180deg);
    }
    100% {
        transform: rotateX(360deg);
    }
}

.dice-container > .die-d6 {
    $faceHeight: 120px;
    $translate: calc($faceHeight / 2);
    $baseTranslate: calc($faceHeight / 4);

    &[data-face="1"] {
        transform: rotateY(-185deg) rotateX(8deg);
    }
    &[data-face="2"] {
        transform: rotateY(83deg) rotateZ(-10deg);
    }
    &[data-face="3"] {
        transform: rotateY(351deg) rotateX(86deg);
    }
    &[data-face="4"] {
        transform: rotateY(-8deg) rotateX(-100deg);
    }
    &[data-face="5"] {
        transform: rotateY(-101deg) rotateZ(10deg);
    }
    &[data-face="6"] {
        transform: rotateY(-12deg) rotateX(-10deg);
    }

    &.rolling {
        animation: roll-d6 1s linear;
        transform-origin: $faceHeight $faceHeight * 0.5 $faceHeight * 0.5;
    }

    .face {
        &:before {
            color: #fff;
            text-shadow: 2px 2px 6px #000;
            font-size: $faceHeight * 0.7;
            text-align: center;
            line-height: $faceHeight * 0.5;
            width: $faceHeight;
            height: $faceHeight;
            left: -10px;
        }

        width: $faceHeight;
        height: $faceHeight;
        background: $color;
        border: 6px solid $color;

        &:nth-child(1) {
            transform: rotateY(180deg);
        }
        &:nth-child(2) {
            transform: rotateX(180deg) rotateY(90deg) rotateX(180deg) translateZ($translate) translateX($translate);
        }
        &:nth-child(3) {
            transform: rotateX(-90deg) translateY(-$translate) translateZ($translate);
        }
        &:nth-child(4) {
            transform: rotateX(90deg) translateY($translate) translateZ($translate);
        }
        &:nth-child(5) {
            transform: rotateY(90deg) translateZ($translate) translateX(-$translate);
        }
        &:nth-child(6) {
            transform: rotateY(180deg) rotateZ(180deg) rotateX(180deg) translateZ($translate * 2);
        }
    }
}

